Solucion completa sin probar

--- a/BUCEF/Views/Shared/_Layout.cshtml
+++ b/BUCEF/Views/Shared/_Layout.cshtml
@@ -32,6 +32,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Persona/Index">Peronas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="PersonaNatural/Index">Perona Natural</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Geolocalizacion/Index">Geolocalizacion</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Geolocalizacion/Index">Geolocalizacion</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
